kubernetes/backend-deployment.yml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend-deployment
  namespace: ecommerce
spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      name: backend-pod
      labels:
        app: backend

    spec:
      serviceAccountName: secret-manager-sa

      containers:
        - name: backend-container
          image: dattarahegaonkar09/ecommerce-app-backend:v1
          ports:
            - containerPort: 8081

          volumeMounts:
            - mountPath: /mnt/secrets-store
              name: backend-secrets-store
              readOnly: true

          resources:
            requests:
              memory: "40Mi"
              cpu: "5m"
            limits:
              memory: "400Mi"
              cpu: "500m"

      volumes:
        - name: backend-secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "backend-secret-provider"  
                 
      restartPolicy: Always
