kubernetes/frontend-deployment.yml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend-deployment
  namespace: ecommerce
  annotations:
    argocd.argoproj.io/sync-wave: "7"
spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      name: frontend-pod
      labels:
        app: frontend

    spec:
      serviceAccountName: secret-manager-sa

      containers:
        - name: frontend-container
          image: dattarahegaonkar09/ecommerce-app-frontend:v7
          ports:
            - containerPort: 80

          volumeMounts:
            - name: frontend-secrets-store
              mountPath: /mnt/secrets-store
              readOnly: true

          resources:
            requests:
              memory: "40Mi"
              cpu: "5m"
            limits:
              memory: "400Mi"
              cpu: "500m"

      volumes:
        - name: frontend-secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "frontend-secret-provider"


      restartPolicy: Always
