kubernetes/mongo-deployment.yml

kind: Deployment
apiVersion: apps/v1

metadata:
  name: mongo-deployment
  namespace: ecommerce

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mongo

  template:
    metadata:
      name: mongodb-pod
      labels:
        app: mongo

    spec:
      serviceAccountName: secret-manager-sa

      containers:
        - name: mongodb-container
          image: mongo:8.0.4

          ports:
            - containerPort: 27017

          volumeMounts:
            - name: mongo-pvc
              mountPath: /data/db

            - mountPath: /mnt/secrets-store
              name: mongodb-secrets-store
              readOnly: true

          resources:
            requests:
              memory: "140Mi"
              cpu: "5m"
            limits:
              memory: "590Mi"
              cpu: "500m"

      volumes:
        - name: mongo-pvc
          persistentVolumeClaim:
            claimName: mongo-pvc
            
        - name: mongodb-secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "mongodb-secret-provider"
      restartPolicy: Always
