kubernetes/backend-service.yml

kind: Service
apiVersion: v1
metadata:
  name: backend-service
  namespace: ecommerce
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
