kubernetes/mongo-service.yml

kind: Service
apiVersion: v1
metadata:
  name: mongo-service
  namespace: ecommerce
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
